[metadata]
name = python-package-example
version = 0.0.1
author = Caio Moreno
author_email = caiomsouza@gmail.com
description = An Example of a Demo Python Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caiomsouza/python-package-example
project_urls =
    Bug Tracker = https://github.com/caiomsouza/python-package-example/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
